# esp32

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  build.rs  build_remote.sh  sdkconfig.defaults  sdkconfig.defaults.esp32s2
.cargo/: config.toml
src/: main.rs
toolchain-deps/: env-toolchain.sh  init-toolchain.sh
