[package]
name = "rust-esp32-std-demo"
version = "0.20.6"
authors = ["ivmarkov"]
edition = "2018"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "A demo binary crate for the ESP32 and ESP-IDF, which connects to WiFi, Ethernet, drives a small HTTP server and draws on a LED screen"
repository = "https://github.com/ivmarkov/rust-esp32-std-demo"
license = "MIT OR Apache-2.0"
readme = "README.md"

[patch.crates-io]
#smol = { git = "https://github.com/esp-rs-compat/smol" }
#polling = { git = "https://github.com/esp-rs-compat/polling" }
#socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
esp-idf-sys = { version = "0.26", features = ["binstart"] }
esp-idf-svc = "0.31.1"
esp-idf-hal = "0.26"
log = "^0.4.14"

[build-dependencies]
embuild = "0.25"
anyhow = "1"
